+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla

Changes in Achievo 0.9.2
------------------------
+ Added a cron script that sends reminders for todo's.
* Reorganised Achievo codebase. Everything is now located in modules.
* You can now no longer register time on nonactive project phases  (bug #51)
* Security bugfix: Achievo releases 0.7.0 to 0.9.2 contain a vulnerability 
  that allows users to execute arbitrary code on any Achievo installation.
* Updated German and Dutch language files.

Changes in Achievo 0.9.1
------------------------
+ Added form based login, so Achievo should now work with php running as a 
  cgi-binary.
+ Added todo history.
+ Added initial version of resource planning feature.
+ Added 'clickthrough' feature for more easy navigation between items.
+ Added 'multiselect' feature (for example the ability to delete more than one
  record at the same time).
+ Added Chinese language file.
+ Added Danish langugae file.
+ Added 'default' screen to menuitems. (brings back 'one click' 
  timeregistration)
+ Added a search box to the top frame (doesn't find anything yet though).
+ Added multiline select to extended search feature. (bug #30)
* Changed include structure (include classes only when needed), resulting in 
  better performance.
* Achievo now works with allow_call_time_pass_reference = Off in php.ini.
* Achievo no longer behaves weird when having multiple open browser windows.
* Updated Spanish language file (bug #53)
* Bugfixes for bugs #17, #27 and #40.
* Several other bugfixes.

Changes in Achievo 0.9.0
------------------------
+ Re-enabled all 0.7.3 unstable features that were turned off for the stable
  0.8.0 release: 
  finance menu (billing)
  cost registration 
  scheduler 
  postgres/oracle database install files.
+ Added a Personal Information Manager which is now the default startup 
  screen.
* Bugfixes to the scheduler.